package calculador;

import categorias.Empleado;

public abstract class CalculadorSueldo {
    public abstract Double getSueldo(Empleado empleado);
}
