package categorias;

public abstract class CategoriaEmpleado {
    // Atributos
    private String nombre;
    private Double sueldo;

    // Getters
    public abstract String getNombre();

    public abstract Double getSueldo();
}
