package categorias;

public class Operador extends CategoriaEmpleado {

    @Override
    public String getNombre() {
        return "Operador";
    }

    @Override
    public Double getSueldo() {
        return 10500.0;
    }
}
